--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,7 +2,6 @@
 # Server
 # ============================================
 NODE_ENV=productiongit rm --cached frontend
-
 PORT=5000
 
 
@@ -41,7 +40,7 @@ TOTP_ISSUER=AutoSecure
 # ============================================
 # CORS
 # ============================================
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://autosecure.vercel.app
 
 
 # ============================================
