Fixed RateLiting and updated email service configuration

--- a/.hintrc
+++ b/.hintrc
@@ -10,6 +10,7 @@
     "axe/name-role-value": "off",
     "button-type": "off",
     "axe/forms": "off",
-    "no-inline-styles": "off"
+    "no-inline-styles": "off",
+    "typescript-config/strict": "off"
   }
 }
