--- a/.gitignore
+++ b/.gitignore
@@ -12,14 +12,10 @@ out/
 # Environment files (keep examples)
 .env
 .env.local
+backend/.env.example
 .env.production
 backend/.env
 frontend/.env.local
-!.env.example
-!.env.local.example
-!.env.production.example
-!backend/.env.example
-!frontend/.env.local.example
 
 # Storage (local development only)
 backend/storage/policies/
@@ -50,3 +46,8 @@ coverage/
 # Misc
 .vercel
 .railway
+
+# not needed files
+FRONTEND.md
+Overview.md
+SUMMARY.md
