--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-datepicker": "^8.10.0",
     "react-day-picker": "^9.11.3",
     "react-dom": "^19.2.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.66.0",
     "react-hot-toast": "^2.6.0",
     "recharts": "^3.4.1",
