--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
-    "next": "16.0.2",
+    "next": "^16.0.7",
     "react": "19.2.1",
     "react-datepicker": "^8.10.0",
     "react-day-picker": "^9.11.3",
@@ -40,7 +40,7 @@
     "autoprefixer": "^10.4.22",
     "baseline-browser-mapping": "^2.8.32",
     "eslint": "^9",
-    "eslint-config-next": "16.0.2",
+    "eslint-config-next": "^16.0.7",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
     "typescript": "^5"
