--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "express-rate-limit": "^8.2.1",
     "express-validator": "^7.3.0",
@@ -34,8 +35,7 @@
     "nodemailer": "^7.0.10",
     "qrcode": "^1.5.4",
     "resend": "^6.4.2",
-    "speakeasy": "^2.0.0",
-    "exceljs": "^4.4.0"
+    "speakeasy": "^2.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
