--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "db:init": "tsx src/scripts/initDb.ts",
     "db:seed": "tsx src/scripts/seedMeta.ts",
     "db:migrate-policy": "tsx src/scripts/migratePolicyFields.ts",
+    "db:migrate-folder-whitespace": "tsx src/scripts/migratePolicyFolderWhitespace.ts",
     "db:seed-policy-email": "tsx src/scripts/seedEmailTemplate.ts",
     "db:seed-license-email": "npx tsx src/scripts/seedLicenseEmailTemplate.ts",
     "test:email": "tsx src/scripts/testEmail.ts"
